feat(image-uploading): add jwt middleware to image uploading and add field in image model to know if an image has been approved or not
