# cmd/docs/swagger.json
@@ -54,6 +54,11 @@
         },
         "/images": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all images with pagination",
                 "consumes": [
                     "application/json"
@@ -95,6 +100,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Upload an image",
                 "consumes": [
                     "multipart/form-data"
@@ -109,7 +119,7 @@
                 "parameters": [
                     {
                         "type": "file",
-                        "description": "Image",
+                        "description": "File",
                         "name": "image",
                         "in": "formData",
                         "required": true
