# internal/infrastructure/input/rest/controller/ImageController.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"github.com/Our-Hive/Our-Hive-Admin-Panel-API/internal/application/handler"
+	"github.com/Our-Hive/Our-Hive-Admin-Panel-API/internal/configuration/security"
 	"github.com/gin-gonic/gin"
 	"mime/multipart"
 	"net/http"
@@ -18,8 +19,8 @@ func NewImageController(imageHandler handler.IImageHandler, uploadHandler handle
 }
 
 func (i ImageController) InitRoutes(router *gin.Engine) {
-	router.GET("/images", i.GetAll)
-	router.POST("/images", i.Upload)
+	router.GET("/images", security.JwtMiddleware, security.AdminRoleMiddleware, i.GetAll)
+	router.POST("/images", security.JwtMiddleware, security.AdminRoleMiddleware, i.Upload)
 }
 
 // GetAll godoc
@@ -28,6 +29,7 @@ func (i ImageController) InitRoutes(router *gin.Engine) {
 // @Tags images
 // @Accept  json
 // @Produce  json
+// @Security ApiKeyAuth
 // @Param size query int false "Page size"
 // @Param startAfter query string false "Start after"
 // @Success 200 {array} response.Image "Success"
@@ -59,12 +61,13 @@ func (i ImageController) GetAll(c *gin.Context) {
 // @Tags images
 // @Accept  multipart/form-data
 // @Produce  json
-// @Param image formData file true "Image"
+// @Security ApiKeyAuth
+// @Param image formData file true "File"
 // @Success 200 {object} response.UploadImage "Success"
 // @Failure 400
 // @Router /images [post]
 func (i ImageController) Upload(c *gin.Context) {
-	file, err := c.FormFile("image")
+	file, err := c.FormFile("file")
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
